// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrailerModal component should render span with text "Trailer is not available" if trailerURL === null 1`] = `
<div
  className="modal"
  onClick={[Function]}
  testid="modal"
>
  <span
    className="noTrailer"
    testid="noTrailer"
  >
    Trailer is not available
  </span>
</div>
`;

exports[`TrailerModal component should render without crashing 1`] = `
<div
  className="modal"
  onClick={[Function]}
  testid="modal"
/>
`;
